fix: improve spacing of list items

--- a/themes/idgaf/assets/css/main.css
+++ b/themes/idgaf/assets/css/main.css
@@ -65,6 +65,9 @@ hr {
 ul,
 ol {
   padding-left: 2rem;
+}
+
+li {
   margin: 0.3rem 0;
 }
 
